--- a/deps/rust/crates/BUILD.regex-syntax-0.8.9.bazel
+++ b/deps/rust/crates/BUILD.regex-syntax-0.8.9.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "phf_shared",
+    name = "regex_syntax",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -31,6 +31,14 @@ rust_library(
     crate_features = [
         "default",
         "std",
+        "unicode",
+        "unicode-age",
+        "unicode-bool",
+        "unicode-case",
+        "unicode-gencat",
+        "unicode-perl",
+        "unicode-script",
+        "unicode-segment",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
@@ -39,13 +47,10 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=phf_shared",
+        "crate-name=regex-syntax",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.11.3",
-    deps = [
-        "@crates_vendor__siphasher-1.0.2//:siphasher",
-    ],
+    version = "0.8.9",
 )
