--- a/deps/rust/crates/BUILD.zmij-1.0.19.bazel
+++ b/deps/rust/crates/BUILD.zmij-1.0.19.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "serde_json",
+    name = "zmij",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,12 +29,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-        "raw_value",
-        "std",
-        "unbounded_depth",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -42,18 +36,14 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=serde_json",
+        "crate-name=zmij",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.149",
+    version = "1.0.19",
     deps = [
-        "@crates_vendor__itoa-1.0.17//:itoa",
-        "@crates_vendor__memchr-2.7.6//:memchr",
-        "@crates_vendor__serde_core-1.0.228//:serde_core",
-        "@crates_vendor__serde_json-1.0.149//:build_script_build",
-        "@crates_vendor__zmij-1.0.19//:zmij",
+        "@crates_vendor__zmij-1.0.19//:build_script_build",
     ],
 )
 
@@ -76,12 +66,6 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-        "raw_value",
-        "std",
-        "unbounded_depth",
-    ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
     data = glob(
@@ -97,18 +81,18 @@ cargo_build_script(
         ],
     ),
     edition = "2021",
-    pkg_name = "serde_json",
+    pkg_name = "zmij",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=serde_json",
+        "crate-name=zmij",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.149",
+    version = "1.0.19",
     visibility = ["//visibility:private"],
 )
 
