--- a/deps/rust/crates/BUILD.bytes-1.11.1.bazel
+++ b/deps/rust/crates/BUILD.bytes-1.11.1.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "phf_shared",
+    name = "bytes",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -39,13 +39,10 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=phf_shared",
+        "crate-name=bytes",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.11.3",
-    deps = [
-        "@crates_vendor__siphasher-1.0.2//:siphasher",
-    ],
+    version = "1.11.1",
 )
