--- a/deps/rust/crates/BUILD.clap_builder-4.5.57.bazel
+++ b/deps/rust/crates/BUILD.clap_builder-4.5.57.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "phf_shared",
+    name = "clap_builder",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,7 +29,7 @@ rust_library(
         ],
     ),
     crate_features = [
-        "default",
+        "help",
         "std",
     ],
     crate_root = "src/lib.rs",
@@ -39,13 +39,14 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=phf_shared",
+        "crate-name=clap_builder",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.11.3",
+    version = "4.5.57",
     deps = [
-        "@crates_vendor__siphasher-1.0.2//:siphasher",
+        "@crates_vendor__anstyle-1.0.13//:anstyle",
+        "@crates_vendor__clap_lex-0.7.7//:clap_lex",
     ],
 )
