--- a/deps/rust/crates/BUILD.flate2-1.1.9.bazel
+++ b/deps/rust/crates/BUILD.flate2-1.1.9.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "phf_shared",
+    name = "flate2",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,23 +29,26 @@ rust_library(
         ],
     ),
     crate_features = [
+        "any_impl",
         "default",
-        "std",
+        "miniz_oxide",
+        "rust_backend",
     ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=phf_shared",
+        "crate-name=flate2",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.11.3",
+    version = "1.1.9",
     deps = [
-        "@crates_vendor__siphasher-1.0.2//:siphasher",
+        "@crates_vendor__crc32fast-1.5.0//:crc32fast",
+        "@crates_vendor__miniz_oxide-0.8.9//:miniz_oxide",
     ],
 )
