--- a/deps/rust/crates/BUILD.lol_html-2.7.1.bazel
+++ b/deps/rust/crates/BUILD.lol_html-2.7.1.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "phf_shared",
+    name = "lol_html",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,24 +28,30 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-        "std",
-    ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2024",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=phf_shared",
+        "crate-name=lol_html",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.11.3",
+    version = "2.7.1",
     deps = [
-        "@crates_vendor__siphasher-1.0.2//:siphasher",
+        "@crates_vendor__bitflags-2.10.0//:bitflags",
+        "@crates_vendor__cfg-if-1.0.4//:cfg_if",
+        "@crates_vendor__cssparser-0.36.0//:cssparser",
+        "@crates_vendor__encoding_rs-0.8.35//:encoding_rs",
+        "@crates_vendor__foldhash-0.2.0//:foldhash",
+        "@crates_vendor__hashbrown-0.16.1//:hashbrown",
+        "@crates_vendor__memchr-2.7.6//:memchr",
+        "@crates_vendor__mime-0.3.17//:mime",
+        "@crates_vendor__precomputed-hash-0.1.1//:precomputed_hash",
+        "@crates_vendor__selectors-0.33.0//:selectors",
+        "@crates_vendor__thiserror-2.0.18//:thiserror",
     ],
 )
