--- a/deps/rust/crates/BUILD.lol_html_c_api-1.3.1.bazel
+++ b/deps/rust/crates/BUILD.lol_html_c_api-1.3.1.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "serde_json",
+    name = "lolhtml",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -30,30 +30,28 @@ rust_library(
         ],
     ),
     crate_features = [
+        "capi",
         "default",
-        "raw_value",
-        "std",
-        "unbounded_depth",
     ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2024",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=serde_json",
+        "crate-name=lol_html_c_api",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.149",
+    version = "1.3.1",
     deps = [
-        "@crates_vendor__itoa-1.0.17//:itoa",
-        "@crates_vendor__memchr-2.7.6//:memchr",
-        "@crates_vendor__serde_core-1.0.228//:serde_core",
-        "@crates_vendor__serde_json-1.0.149//:build_script_build",
-        "@crates_vendor__zmij-1.0.19//:zmij",
+        "@crates_vendor__encoding_rs-0.8.35//:encoding_rs",
+        "@crates_vendor__libc-0.2.180//:libc",
+        "@crates_vendor__lol_html-2.7.1//:lol_html",
+        "@crates_vendor__lol_html_c_api-1.3.1//:build_script_build",
+        "@crates_vendor__thiserror-2.0.18//:thiserror",
     ],
 )
 
@@ -77,10 +75,8 @@ cargo_build_script(
         ],
     ),
     crate_features = [
+        "capi",
         "default",
-        "raw_value",
-        "std",
-        "unbounded_depth",
     ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
@@ -96,19 +92,20 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    edition = "2021",
-    pkg_name = "serde_json",
+    edition = "2024",
+    links = "lolhtml",
+    pkg_name = "lol_html_c_api",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=serde_json",
+        "crate-name=lol_html_c_api",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.149",
+    version = "1.3.1",
     visibility = ["//visibility:private"],
 )
 
