--- a/deps/rust/crates/BUILD.phf-0.13.1.bazel
+++ b/deps/rust/crates/BUILD.phf-0.13.1.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "phf_shared",
+    name = "phf",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -30,22 +30,27 @@ rust_library(
     ),
     crate_features = [
         "default",
+        "macros",
+        "phf_macros",
         "std",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
+    proc_macro_deps = [
+        "@crates_vendor__phf_macros-0.13.1//:phf_macros",
+    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=phf_shared",
+        "crate-name=phf",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.11.3",
+    version = "0.13.1",
     deps = [
-        "@crates_vendor__siphasher-1.0.2//:siphasher",
+        "@crates_vendor__phf_shared-0.13.1//:phf_shared",
     ],
 )
