--- a/deps/rust/crates/BUILD.regex-1.12.3.bazel
+++ b/deps/rust/crates/BUILD.regex-1.12.3.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "phf_shared",
+    name = "regex",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -30,7 +30,22 @@ rust_library(
     ),
     crate_features = [
         "default",
+        "perf",
+        "perf-backtrack",
+        "perf-cache",
+        "perf-dfa",
+        "perf-inline",
+        "perf-literal",
+        "perf-onepass",
         "std",
+        "unicode",
+        "unicode-age",
+        "unicode-bool",
+        "unicode-case",
+        "unicode-gencat",
+        "unicode-perl",
+        "unicode-script",
+        "unicode-segment",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
@@ -39,13 +54,16 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=phf_shared",
+        "crate-name=regex",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.11.3",
+    version = "1.12.3",
     deps = [
-        "@crates_vendor__siphasher-1.0.2//:siphasher",
+        "@crates_vendor__aho-corasick-1.1.4//:aho_corasick",
+        "@crates_vendor__memchr-2.7.6//:memchr",
+        "@crates_vendor__regex-automata-0.4.14//:regex_automata",
+        "@crates_vendor__regex-syntax-0.8.9//:regex_syntax",
     ],
 )
