--- a/deps/rust/crates/BUILD.regex-automata-0.4.14.bazel
+++ b/deps/rust/crates/BUILD.regex-automata-0.4.14.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "phf_shared",
+    name = "regex_automata",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,8 +29,29 @@ rust_library(
         ],
     ),
     crate_features = [
-        "default",
+        "alloc",
+        "dfa-onepass",
+        "dfa-search",
+        "hybrid",
+        "meta",
+        "nfa-backtrack",
+        "nfa-pikevm",
+        "nfa-thompson",
+        "perf-inline",
+        "perf-literal",
+        "perf-literal-multisubstring",
+        "perf-literal-substring",
         "std",
+        "syntax",
+        "unicode",
+        "unicode-age",
+        "unicode-bool",
+        "unicode-case",
+        "unicode-gencat",
+        "unicode-perl",
+        "unicode-script",
+        "unicode-segment",
+        "unicode-word-boundary",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
@@ -39,13 +60,15 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=phf_shared",
+        "crate-name=regex-automata",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.11.3",
+    version = "0.4.14",
     deps = [
-        "@crates_vendor__siphasher-1.0.2//:siphasher",
+        "@crates_vendor__aho-corasick-1.1.4//:aho_corasick",
+        "@crates_vendor__memchr-2.7.6//:memchr",
+        "@crates_vendor__regex-syntax-0.8.9//:regex_syntax",
     ],
 )
