--- a/deps/rust/crates/BUILD.slab-0.4.12.bazel
+++ b/deps/rust/crates/BUILD.slab-0.4.12.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "phf_shared",
+    name = "slab",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -33,19 +33,16 @@ rust_library(
         "std",
     ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=phf_shared",
+        "crate-name=slab",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.11.3",
-    deps = [
-        "@crates_vendor__siphasher-1.0.2//:siphasher",
-    ],
+    version = "0.4.12",
 )
