--- a/deps/rust/crates/BUILD.swc_ecma_parser-33.0.1.bazel
+++ b/deps/rust/crates/BUILD.swc_ecma_parser-33.0.1.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "phf_shared",
+    name = "swc_ecma_parser",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,23 +29,36 @@ rust_library(
         ],
     ),
     crate_features = [
-        "default",
-        "std",
+        "typescript",
+        "unstable",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
+    proc_macro_deps = [
+        "@crates_vendor__seq-macro-0.3.6//:seq_macro",
+    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=phf_shared",
+        "crate-name=swc_ecma_parser",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.11.3",
+    version = "33.0.1",
     deps = [
-        "@crates_vendor__siphasher-1.0.2//:siphasher",
+        "@crates_vendor__bitflags-2.10.0//:bitflags",
+        "@crates_vendor__either-1.15.0//:either",
+        "@crates_vendor__num-bigint-0.4.6//:num_bigint",
+        "@crates_vendor__phf-0.11.3//:phf",
+        "@crates_vendor__rustc-hash-2.1.1//:rustc_hash",
+        "@crates_vendor__serde-1.0.228//:serde",
+        "@crates_vendor__smartstring-1.0.1//:smartstring",
+        "@crates_vendor__swc_atoms-9.0.0//:swc_atoms",
+        "@crates_vendor__swc_common-18.0.1//:swc_common",
+        "@crates_vendor__swc_ecma_ast-20.0.1//:swc_ecma_ast",
+        "@crates_vendor__tracing-0.1.44//:tracing",
     ],
 )
