--- a/deps/rust/crates/BUILD.zerocopy-0.8.37.bazel
+++ b/deps/rust/crates/BUILD.zerocopy-0.8.37.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "serde_json",
+    name = "zerocopy",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -30,10 +30,7 @@ rust_library(
         ],
     ),
     crate_features = [
-        "default",
-        "raw_value",
-        "std",
-        "unbounded_depth",
+        "simd",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
@@ -42,18 +39,14 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=serde_json",
+        "crate-name=zerocopy",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.149",
+    version = "0.8.37",
     deps = [
-        "@crates_vendor__itoa-1.0.17//:itoa",
-        "@crates_vendor__memchr-2.7.6//:memchr",
-        "@crates_vendor__serde_core-1.0.228//:serde_core",
-        "@crates_vendor__serde_json-1.0.149//:build_script_build",
-        "@crates_vendor__zmij-1.0.19//:zmij",
+        "@crates_vendor__zerocopy-0.8.37//:build_script_build",
     ],
 )
 
@@ -77,10 +70,7 @@ cargo_build_script(
         ],
     ),
     crate_features = [
-        "default",
-        "raw_value",
-        "std",
-        "unbounded_depth",
+        "simd",
     ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
@@ -97,18 +87,18 @@ cargo_build_script(
         ],
     ),
     edition = "2021",
-    pkg_name = "serde_json",
+    pkg_name = "zerocopy",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=serde_json",
+        "crate-name=zerocopy",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.149",
+    version = "0.8.37",
     visibility = ["//visibility:private"],
 )
 
