Add queue error codes compatibility flag tests

--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -101,7 +101,10 @@ wd_test(
 wd_test(
     src = "queue-test.wd-test",
     args = ["--experimental"],
-    data = ["queue-test.js"],
+    data = [
+        "queue-error-codes-test.js",
+        "queue-test.js",
+    ],
 )
 
 wd_test(
