add opennextjs streaming tests

--- a/.bazelignore
+++ b/.bazelignore
@@ -1,5 +1,6 @@
 node_modules
 images/container-client-test/node_modules
+src/workerd/api/tests/opennextjs/src/node_modules
 
 # Nested modules
 build/google-benchmark
