--- a/package.json
+++ b/package.json
@@ -8,18 +8,25 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
-    "@types/node": "^25.0.10",
+    "@types/node": "^25.2.1",
     "capnp-es": "0.0.14",
     "chrome-remote-interface": "^0.33.3",
     "esbuild": "^0.27.2",
     "eslint": "^9.39.2",
     "expect-type": "^1.3.0",
-    "typescript-eslint": "^8.53.0"
+    "typescript-eslint": "^8.54.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild"
-    ]
+    ],
+    "packageExtensions": {
+      "@opennextjs/cloudflare": {
+        "dependencies": {
+          "esbuild": "^0.27.2"
+        }
+      }
+    }
   },
   "packageManager": "pnpm@10.28.2"
 }
