Add compat flag that causes deleteAll to delete alarms as well as data
This has been requested on multiple occasions now and is a more
reasonable default behavior than leaving alarms behind.

I was also able to structure things such that this leaves the object
entirely empty after the deleteAll, which is a nice side effect.

--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -14,6 +14,12 @@ wd_test(
 )
 
 wd_test(
+    src = "delete-all-deletes-alarm-test.wd-test",
+    args = ["--experimental"],
+    data = ["delete-all-deletes-alarm-test.js"],
+)
+
+wd_test(
     src = "actor-alarms-test.wd-test",
     args = ["--experimental"],
     data = ["actor-alarms-test.js"],
