--- a/.github/workflows/daily-release.yml
+++ b/.github/workflows/daily-release.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Get current date
         id: date
-        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+        run: echo "date=$(date -d '+7 days' +'%Y-%m-%d')" >> $GITHUB_OUTPUT
 
       - name: Update compatibility date
         run: |
