Add containers_pid_namespace compatibility flag
When set, this compatibility flag instructs the containers runtime to
start the user's container in a separate PID namespace. Eventually this
will become the default (past some yet-to-be-determined compatibility
date).

--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -382,6 +382,7 @@ wd_capnp_library(src = "frankenvalue.capnp")
 wd_capnp_library(
     src = "container.capnp",
     deps = [
+        ":compatibility-date_capnp",
         "@capnp-cpp//src/capnp/compat:byte-stream_capnp",
     ],
 )
