add brotli support to Compression and Decompression stream

--- a/src/wpt/BUILD.bazel
+++ b/src/wpt/BUILD.bazel
@@ -82,6 +82,7 @@ wpt_test(
 
 wpt_test(
     name = "compression",
+    size = "enormous",
     config = "compression-test.ts",
     start_server = True,
     target_compatible_with = select({
