--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -248,6 +248,7 @@ wd_cc_library(
     deps = [
         "//src/workerd/io",
         "//src/workerd/util:state-machine",
+        "@capnp-cpp//src/kj/compat:kj-brotli",
         "@nbytes",
     ],
 )
