--- a/src/node/tsconfig.json
+++ b/src/node/tsconfig.json
@@ -17,7 +17,8 @@
       "cloudflare-internal:sockets": ["./internal/sockets.d.ts"],
       "cloudflare-internal:workers": ["./internal/workers.d.ts"],
       "cloudflare-internal:tracing": ["./internal/tracing.d.ts"],
-      "cloudflare-internal:filesystem": ["./internal/filesystem.d.ts"]
+      "cloudflare-internal:filesystem": ["./internal/filesystem.d.ts"],
+      "cloudflare-internal:messagechannel": ["./internal/messagechannel.d.ts"]
     }
   }
 }
