update dependencies to latest version

--- a/deps/rust/crates/BUILD.clap-4.5.58.bazel
+++ b/deps/rust/crates/BUILD.clap-4.5.58.bazel
@@ -6,13 +6,16 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
-load("@rules_rust//rust:defs.bzl", "rust_library")
+load(
+    "@rules_rust//rust:defs.bzl",
+    "rust_binary",
+    "rust_library",
+)
 
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "dragonbox_ecma",
+    name = "clap",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,26 +32,34 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "derive",
+        "help",
+        "std",
+    ],
     crate_root = "src/lib.rs",
     edition = "2021",
+    proc_macro_deps = [
+        "@crates_vendor__clap_derive-4.5.55//:clap_derive",
+    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=dragonbox_ecma",
+        "crate-name=clap",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.1.0",
+    version = "4.5.58",
     deps = [
-        "@crates_vendor__dragonbox_ecma-0.1.0//:build_script_build",
+        "@crates_vendor__clap_builder-4.5.58//:clap_builder",
     ],
 )
 
-cargo_build_script(
-    name = "_bs",
+rust_binary(
+    name = "stdio-fixture__bin",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -58,7 +69,6 @@ cargo_build_script(
         allow_empty = True,
         exclude = [
             "**/* *",
-            "**/*.rs",
             ".tmp_git_root/**/*",
             "BUILD",
             "BUILD.bazel",
@@ -66,38 +76,29 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_name = "build_script_build",
-    crate_root = "build.rs",
-    data = glob(
-        include = ["**"],
-        allow_empty = True,
-        exclude = [
-            "**/* *",
-            ".tmp_git_root/**/*",
-            "BUILD",
-            "BUILD.bazel",
-            "WORKSPACE",
-            "WORKSPACE.bazel",
-        ],
-    ),
+    crate_features = [
+        "derive",
+        "help",
+        "std",
+    ],
+    crate_root = "src/bin/stdio-fixture.rs",
     edition = "2021",
-    pkg_name = "dragonbox_ecma",
+    proc_macro_deps = [
+        "@crates_vendor__clap_derive-4.5.55//:clap_derive",
+    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=dragonbox_ecma",
+        "crate-name=clap",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.1.0",
-    visibility = ["//visibility:private"],
-)
-
-alias(
-    name = "build_script_build",
-    actual = ":_bs",
-    tags = ["manual"],
+    version = "4.5.58",
+    deps = [
+        ":clap",
+        "@crates_vendor__clap_builder-4.5.58//:clap_builder",
+    ],
 )
