--- a/deps/rust/crates/BUILD.ada-url-3.4.2.bazel
+++ b/deps/rust/crates/BUILD.ada-url-3.4.2.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "libc",
+    name = "ada_url",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -31,24 +31,23 @@ rust_library(
     ),
     crate_features = [
         "default",
-        "extra_traits",
         "std",
     ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2024",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=libc",
+        "crate-name=ada-url",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.180",
+    version = "3.4.2",
     deps = [
-        "@crates_vendor__libc-0.2.180//:build_script_build",
+        "@crates_vendor__ada-url-3.4.2//:build_script_build",
     ],
 )
 
@@ -73,7 +72,6 @@ cargo_build_script(
     ),
     crate_features = [
         "default",
-        "extra_traits",
         "std",
     ],
     crate_name = "build_script_build",
@@ -90,20 +88,25 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    edition = "2021",
-    pkg_name = "libc",
+    edition = "2024",
+    pkg_name = "ada-url",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=libc",
+        "crate-name=ada-url",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.180",
+    version = "3.4.2",
     visibility = ["//visibility:private"],
+    deps = [
+        "@crates_vendor__cc-1.2.56//:cc",
+        "@crates_vendor__link_args-0.6.0//:link_args",
+        "@crates_vendor__regex-1.12.3//:regex",
+    ],
 )
 
 alias(
