--- a/deps/rust/crates/BUILD.anyhow-1.0.101.bazel
+++ b/deps/rust/crates/BUILD.anyhow-1.0.101.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "ada_url",
+    name = "anyhow",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -34,20 +34,20 @@ rust_library(
         "std",
     ],
     crate_root = "src/lib.rs",
-    edition = "2024",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=ada-url",
+        "crate-name=anyhow",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "3.4.1",
+    version = "1.0.101",
     deps = [
-        "@crates_vendor__ada-url-3.4.1//:build_script_build",
+        "@crates_vendor__anyhow-1.0.101//:build_script_build",
     ],
 )
 
@@ -88,25 +88,20 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    edition = "2024",
-    pkg_name = "ada-url",
+    edition = "2021",
+    pkg_name = "anyhow",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=ada-url",
+        "crate-name=anyhow",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "3.4.1",
+    version = "1.0.101",
     visibility = ["//visibility:private"],
-    deps = [
-        "@crates_vendor__cc-1.2.55//:cc",
-        "@crates_vendor__link_args-0.6.0//:link_args",
-        "@crates_vendor__regex-1.12.3//:regex",
-    ],
 )
 
 alias(
