--- a/deps/rust/crates/BUILD.capnp-futures-0.25.1.bazel
+++ b/deps/rust/crates/BUILD.capnp-futures-0.25.1.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "clap_builder",
+    name = "capnp_futures",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,10 +28,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "help",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -39,14 +35,15 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=clap_builder",
+        "crate-name=capnp-futures",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "4.5.57",
+    version = "0.25.1",
     deps = [
-        "@crates_vendor__anstyle-1.0.13//:anstyle",
-        "@crates_vendor__clap_lex-0.7.7//:clap_lex",
+        "@crates_vendor__capnp-0.25.1//:capnp",
+        "@crates_vendor__futures-channel-0.3.31//:futures_channel",
+        "@crates_vendor__futures-util-0.3.31//:futures_util",
     ],
 )
