--- a/deps/rust/crates/BUILD.clap_builder-4.5.58.bazel
+++ b/deps/rust/crates/BUILD.clap_builder-4.5.58.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "unicode_ident",
+    name = "clap_builder",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,17 +28,25 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "help",
+        "std",
+    ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=unicode-ident",
+        "crate-name=clap_builder",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.22",
+    version = "4.5.58",
+    deps = [
+        "@crates_vendor__anstyle-1.0.13//:anstyle",
+        "@crates_vendor__clap_lex-1.0.0//:clap_lex",
+    ],
 )
