--- a/deps/rust/crates/BUILD.clap_lex-1.0.0.bazel
+++ b/deps/rust/crates/BUILD.clap_lex-1.0.0.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "memchr",
+    name = "clap_lex",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,11 +28,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "alloc",
-        "default",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -40,10 +35,10 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=memchr",
+        "crate-name=clap_lex",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "2.7.6",
+    version = "1.0.0",
 )
