--- a/deps/rust/crates/BUILD.zerocopy-0.8.39.bazel
+++ b/deps/rust/crates/BUILD.zerocopy-0.8.39.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "zmij",
+    name = "zerocopy",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,6 +29,9 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "simd",
+    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -36,14 +39,14 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=zmij",
+        "crate-name=zerocopy",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.19",
+    version = "0.8.39",
     deps = [
-        "@crates_vendor__zmij-1.0.19//:build_script_build",
+        "@crates_vendor__zerocopy-0.8.39//:build_script_build",
     ],
 )
 
@@ -66,6 +69,9 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "simd",
+    ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
     data = glob(
@@ -81,18 +87,18 @@ cargo_build_script(
         ],
     ),
     edition = "2021",
-    pkg_name = "zmij",
+    pkg_name = "zerocopy",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=zmij",
+        "crate-name=zerocopy",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.19",
+    version = "0.8.39",
     visibility = ["//visibility:private"],
 )
 
