--- a/.bazelrc
+++ b/.bazelrc
@@ -41,7 +41,8 @@ build --noincompatible_repo_env_ignores_action_env
 
 # Use -isystem for cc_library includes attribute – this prevents warnings for misbehaving external
 # code.
-build:linux --features=external_include_paths --host_features=external_include_paths
+build:linux-target --features=external_include_paths
+build:linux --host_features=external_include_paths
 
 # Forward compatibility with future Bazel versions:
 # Disable deprecated cfg = "host" Bazel rule setting. Blocked on perfetto.
@@ -268,6 +269,7 @@ build:unix --cxxopt='-Wno-missing-field-initializers' --host_cxxopt='-Wno-missin
 build:unix --cxxopt='-Wsuggest-override'
 
 build:linux --config=unix
+build:linux --config=linux-target
 build:macos --config=unix
 
 # Support macOS 13 as the minimum version. There should be at least a warning when backward
@@ -295,32 +297,44 @@ build:macos-cross-x86_64 --cpu=darwin_x86_64 --host_cpu=darwin_arm64 --platforms
 # Test performance is still very much satisfactory considering that emulation is being used here.
 build:macos-cross-x86_64 --test_timeout=1,30,60,240
 
-# On Linux, always link libc++ statically to avoid compatibility issues with different OS versions.
-# macOS links with dynamic libc++ by default, which has good backwards compatibility.
-# Drop default link flags, which include libstdc++ for Linux
-build:linux --features=-default_link_libs --host_features=-default_link_libs
-build:linux --cxxopt='-stdlib=libc++' --host_cxxopt='-stdlib=libc++'
-build:linux --linkopt='-stdlib=libc++' --host_linkopt='-stdlib=libc++'
-build:linux --linkopt='-l:libc++.a' --linkopt='-lm' --linkopt='-static-libgcc'
+# ── Linux target flags ─────────────────────────────────────────────────────────
+# Target-only compilation flags for Linux x86_64. Separated from build:linux so
+# build:rbe can reuse them for cross-compilation (macOS host -> Linux containers)
+# without pulling in --host_* flags that would break macOS host tools.
+
+# Always link libc++ statically to avoid compatibility issues with different OS versions.
+# Drop default link flags, which include libstdc++ for Linux.
+build:linux-target --features=-default_link_libs
+build:linux-target --cxxopt='-stdlib=libc++'
+build:linux-target --linkopt='-stdlib=libc++'
+build:linux-target --linkopt='-l:libc++.a' --linkopt='-lm' --linkopt='-static-libgcc'
+
+# Enable PIC. On macOS pic is the default, and the objc_library rule does not work
+# correctly if we use this flag since it will not find the object files to include.
+# https://github.com/bazelbuild/bazel/issues/12439#issuecomment-914449079
+build:linux-target --force_pic
+
+# Garbage collection sections and optimize binary size.
+build:linux-target --linkopt="-Wl,--gc-sections"
+build:linux-target --copt="-ffunction-sections"
+build:linux-target --copt="-fdata-sections"
+
+# Use clang lld.
+build:linux-target --linkopt="-fuse-ld=lld"
+
+# ── Linux host flags ──────────────────────────────────────────────────────────
+# Additional host flags for native Linux builds (where host is also Linux).
+# Not needed by build:rbe since the macOS host already has sane defaults.
+build:linux --host_features=-default_link_libs
+build:linux --host_cxxopt='-stdlib=libc++'
+build:linux --host_linkopt='-stdlib=libc++'
 # We don't expect to distribute host tools, no need to statically link libgcc.
 # TODO(cleanup): Ideally we'd also use shared libc++ here, we'd just need to install the
 # libunwind-<version>-dev and libc++abi-<version>-dev packages on CI to have all of shared libc++
 # available.
 build:linux --host_linkopt='-l:libc++.a' --host_linkopt='-lm'
-
-# On Linux, enable PIC. In macos pic is the default, and the objc_library rule does not work
-# correctly if we use this flag since it will not find the object files to include
-# https://github.com/bazelbuild/bazel/issues/12439#issuecomment-914449079
-build:linux --force_pic
-
-# On Linux, garbage collection sections and optimize binary size. These do not apply to the macOS
-# toolchain.
-build:linux --linkopt="-Wl,--gc-sections"
-build:linux --copt="-ffunction-sections" --host_copt="-ffunction-sections"
-build:linux --copt="-fdata-sections" --host_copt="-fdata-sections"
-
-# On Linux, use clang lld.
-build:linux --linkopt="-fuse-ld=lld"
+build:linux --host_copt="-ffunction-sections"
+build:linux --host_copt="-fdata-sections"
 
 #
 # Windows
@@ -491,3 +505,51 @@ coverage --build_tests_only
 # This config is defined internally and enabled on many machines.
 # Defining it as empty just so these machines can run build commands from the workerd repo
 build:rosetta-arm64 --define=rosetta_arm64_no_op=1
+
+# ── Remote Build Execution via CF Containers ──────────────────────────────────
+# Usage: bazel build --config=rbe //src/workerd/server:workerd
+# Requires the gRPC proxy running: grpc-proxy/rbe-proxy -backend https://rbe.runtime-playground.workers.dev -token <token>
+build:rbe --remote_executor=grpc://localhost:50051
+build:rbe --remote_instance_name=default
+build:rbe --define=rbe=true
+
+# Hermetic CC toolchain via toolchains_llvm (LLVM 19.1.6, downloaded by Bazel).
+# The compiler is delivered to remote containers via CAS — no compiler needs to
+# be pre-installed in the container image. Configured in MODULE.bazel.
+build:rbe --extra_toolchains=@llvm_toolchain//:all
+
+# Remote containers are Linux x86_64. All actions — target and host/exec — run
+# remotely. We must set --host_platform too because V8's custom build rules
+# (torque, bytecode_builtins_list_generator, etc.) compile tool binaries in the
+# target configuration, not exec. Without --host_platform, those tools are compiled
+# for Linux but then Bazel tries to execute them locally on macOS → "cannot execute
+# binary file". With both platforms set to Linux, everything runs on the containers.
+build:rbe --extra_execution_platforms=//:rbe_linux_x86_64
+build:rbe --platforms=//:rbe_linux_x86_64
+build:rbe --host_platform=//:rbe_linux_x86_64
+
+# Suppress modulemap warning: toolchains_llvm generates a modulemap with
+# umbrella "/include" (from sysroot="/") which doesn't exist on Linux containers.
+build:rbe --copt=-Wno-incomplete-umbrella --host_copt=-Wno-incomplete-umbrella
+
+# All actions run remotely. With --host_platform=linux, all tool binaries and
+# Python interpreters are Linux binaries, so local/sandboxed fallback would fail
+# on macOS with "Exec format error". Remote-only ensures consistent execution.
+build:rbe --spawn_strategy=remote
+build:rbe --genrule_strategy=remote
+
+# Concurrency — remote actions are I/O-bound, run many in parallel
+build:rbe --jobs=100
+build:rbe --remote_max_connections=200
+
+# Build without the Bytes — intermediate outputs stay in R2, only downloaded
+# if a local action actually needs them. Dramatically reduces bandwidth since
+# containers fetch inputs directly from R2.
+build:rbe --remote_download_minimal
+
+# Increase remote timeout — first build uploads the entire LLVM toolchain (~700MB)
+# to CAS, and large compile actions (e.g. V8) can take a while.
+build:rbe --remote_timeout=600s
+
+# workerd links statically — skip building .so/.dylib files
+build:rbe --dynamic_mode=off
